--- a/wiki/ja/目次/操作一覧.md
+++ b/wiki/ja/目次/操作一覧.md
@@ -20,4 +20,4 @@
 | `X`長押し	| - | 詠唱 |
 | `Z`+`X`	| - | 詠唱キャンセル |
 | `↓`+`←`or`→`	| - | しゃがむ移動 |
-| `C` long press	| - | 超高速リールを止める |
+| `C`長押し	| - | 超高速リールを止める |
