--- a/wiki/ja/目次/スキル.md
+++ b/wiki/ja/目次/スキル.md
@@ -35,7 +35,7 @@
 
 #### 体力スキル :id=体力
 
-| スキル名 | 操作方法	| 説明	| 習得方法 |
+| スキル名 | 説明	| 習得方法 |
 | --- | --- | --- |
 | はにわのお守り	| HPとMPを大きく増大させるが、宝箱を取得できる確率が減少する。<br>使用する際はで`メニュー`を開き`スキル`で`使用する`にチェックを入れて下さい。<br>回復アイテムの回復量が二倍になる。| [マップ宝箱] |
 | HP+10	| 最大HPが 10 増加する。	| [マップ宝箱] |
@@ -43,7 +43,7 @@
 
 #### 魔力スキル :id=魔力
 
-| スキル名 | 操作方法	| 説明	| 習得方法 |
+| スキル名 | 説明	| 習得方法 |
 | --- | --- | --- |
 | はにわのお守り	| HPとMPを大きく増大させるが、宝箱を取得できる確率が減少する。<br>使用する際はで`メニュー`を開き`スキル`で`使用する`にチェックを入れて下さい。<br>回復アイテムの回復量が二倍になる。| [マップ宝箱] |
 | MP+20	| 最大MPが 20 増加する。	| [マップ宝箱] |
