--- a/wiki/ja/目次/スキル.md
+++ b/wiki/ja/目次/スキル.md
@@ -3,7 +3,7 @@
 <!-- このマークを使用しページ内のURLをリダイレクト可能 -->
 [マップ宝箱]: wiki/ja/マップ/マップ宝箱
 
-#### 攻擊スキル :id=攻擊
+#### 攻擊スキル :id=attack
 
 | スキル名 | 操作方法	| 説明	| 習得方法 |
 | --- | --- | --- | --- |
@@ -17,13 +17,13 @@
 | シールドバッシュ	| シールド中 `Z`	| シールドのエネルギーを拡散。<br>敵の攻撃にタイミングよく当てると、<br>敵を強く弾き飛ばす。	| [マップ宝箱] |
 | オービタルシールド | シールド中 <br>`←` / `→` + `Z`	| シールドを術者から分離して振り回す。<br>ヒットするとシールド強度を消費するため、<br>何度も連続して使用することはできない。<br>振り回している間に敵に内側に入られると<br>無防備になってしまうので注意。 | [マップ宝箱] |
 
-#### 魔術スキル :id=魔術
+#### 魔術スキル :id=magic
 
 | スキル名 | 操作方法	| 説明	| 習得方法 |
 | --- | --- | --- | --- |
 | バースト	| `Z` + `X` 同時長押しで発動 | 魔力を一気に爆発させ、周囲の敵を吹き飛ばす。<br>このスキルは術者の意識がある限り常に使用可能。	 | 二日目イベント |
 
-#### 防御スキル :id=防御
+#### 防御スキル :id=defensive
 
 | スキル名 | 操作方法	| 説明	| 習得方法 |
 | --- | --- | --- | --- |
@@ -33,7 +33,7 @@
 | シールドバッシュ	| シールド中 `Z`	| シールドのエネルギーを拡散。<br>敵の攻撃にタイミングよく当てると、<br>敵を強く弾き飛ばす。	| [マップ宝箱] |
 | オービタルシールド | シールド中 <br>`←` / `→` + `Z`	| シールドを術者から分離して振り回す。<br>ヒットするとシールド強度を消費するため、<br>何度も連続して使用することはできない。<br>振り回している間に敵に内側に入られると<br>無防備になってしまうので注意。 | [マップ宝箱] |
 
-#### 体力スキル :id=体力
+#### 体力スキル :id=hp
 
 | スキル名 | 説明	| 習得方法 |
 | --- | --- | --- |
@@ -41,14 +41,14 @@
 | HP+10	| 最大HPが 10 増加する。	| [マップ宝箱] |
 | HP+20	| 最大HPが 20 増加する。	| [マップ宝箱] |
 
-#### 魔力スキル :id=魔力
+#### 魔力スキル :id=mp
 
 | スキル名 | 説明	| 習得方法 |
 | --- | --- | --- |
 | はにわのお守り	| HPとMPを大きく増大させるが、宝箱を取得できる確率が減少する。<br>使用する際はで`メニュー`を開き`スキル`で`使用する`にチェックを入れて下さい。<br>回復アイテムの回復量が二倍になる。| [マップ宝箱] |
 | MP+20	| 最大MPが 20 増加する。	| [マップ宝箱] |
 
-#### 未実装のスキル :id=未実装
+#### 未実装のスキル :id=ni
 
 | スキル名 | 説明	|
 | --- | --- |
